# tai-storage-github

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  tai-plugin.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: manifest.yml
src/tai42_storage_github/: __init__.py  client.py  settings.py  storage.py
src/tai_storage_github/: __init__.py  client.py  settings.py  storage.py
tests/: conftest.py  test_binary.py  test_delete_dir.py  test_import_graph.py  test_plugin_spec.py  test_registration.py  test_security.py  test_text.py
