[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tai-storage-github"
version = "0.1.0"
description = "GitHub-backed Storage provider (text + binary/media) for the TAI ecosystem."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "tai42", email = "oss@tai42.ai" },
]
keywords = ["tai", "storage", "github", "mcp", "content", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # The pure interface contract (Storage, ObjectStat, assert_not_root, tai_app).
    "tai-contract>=0.1,<0.2",
    # Pooled clients + settings primitives (PooledClient, TaiBaseSettings, cache).
    "tai-kit>=0.1,<0.2",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
]

[project.urls]
Homepage = "https://tai42.ai"
Repository = "https://github.com/tai42ai/tai-storage-github"
Issues = "https://github.com/tai42ai/tai-storage-github/issues"
Changelog = "https://github.com/tai42ai/tai-storage-github/blob/main/CHANGELOG.md"

[dependency-groups]
# PEP 735 dev group — installed by default on `uv sync`, so the gate
# `uv sync && uv run pytest && uv run ruff check . && uv run pyright` runs clean.
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.389",
    # The plugin-spec test parses tai-plugin.yml.
    "pyyaml>=6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tai_storage_github*"]

[tool.setuptools.package-data]
tai_storage_github = ["py.typed", "tai-plugin.yml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
xfail_strict = true
# Warnings are errors so a real defect that only surfaces as a warning (e.g. a
# missing await -> "coroutine was never awaited") fails the suite loudly.
filterwarnings = ["error"]

[tool.coverage.run]
source = ["tai_storage_github"]

[tool.coverage.report]
fail_under = 97

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PIE", "PT", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"tai_skeleton".msg = "A tai-storage backend sits below the skeleton and never imports it."

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
